
Version v2.1.0 (v2.1 RTM)
	General description:
	
	New features:
		-[Core] IPropertySelectionBehavior interface added to allow users to override the default behavior
		 (which is to not inject any properties). (work item 19389)
		-[Core] New warning added in the Diagnostic Services to warn about classes with too many dependencies.
		 (work item 19428)


Version v2.0.2 (v2.0.2 RTM) 2013-03-10
	General description:
		This release fixes a bug with the Visual Studio Debug View.

	Bug fixes:
		-[Core] Diagnostic Services fail when grouping generic types that have a generic type constraint.
		 (work item 19449)


Version v2.0.1 (v2.0.1 RTM) 2013-02-28
	General description:
		This release fixes a few small bugs.

	Bug fixes:
		-[Core] Custom KnownDependency instances that where added during the interception (ExpressionBuilding)
		 of a decorator type (RegisterDecorator) where not added to the decorated registration. (work item 19391)
		-[Core] Decorating empty (unregistered) collections failed when the decorator had a lifestyle different
		 than transient or singleton. (work item 19400)
		-[Core] When RegisterManyForOpenGeneric registered implementations that implemented multiple closed
		 generic versions of the supplied generic interface, each closed-generic interface got its own
		 registration, which had the effect of still returning more than one instance of that implementation
		 within the registered lifestyle. (work item 19384).
		-[Integration.Wcf] The integration package just didn't work as expected.


Version v2.0.0 (v2.0 RTM) 2013-02-25
	General description:
		This major release adds explicit lifestyle support and Debugger Diagnostic Services to the Core
		library. The addition of explicit lifestyle support makes it easier to register types in any given
		lifestyle, and the Lifestyle.Hybrid makes it really easy to create a registration that mixes
		any number of lifestyles together. The Diagnostic Services help you to spot common configuration and